@@ -931,11 +931,17 @@ class TestCase(unittest.TestCase):
             The values must be strings. The change will only occur in the
             child, so you don't need to fix the environment after running.
         :param universal_newlines: Convert CRLF => LF
+        :param allow_plugins: By default the subprocess is run with
+            --no-plugins to ensure test reproducibility. Also, it is possible
+            for system-wide plugins to create stipple on stderr, which can
+            cause unnecessary test failures.
         """
         env_changes = kwargs.get('env_changes', {})
         working_dir = kwargs.get('working_dir', None)
+        allow_plugins = kwargs.get('allow_plugins', False)
         process = self.start_bzr_subprocess(args, env_changes=env_changes,
-                                            working_dir=working_dir)
+                                            working_dir=working_dir,
+                                            allow_plugins=allow_plugins)
         # We distinguish between retcode=None and retcode not passed.
         supplied_retcode = kwargs.get('retcode', 0)
         return self.finish_bzr_subprocess(process, retcode=supplied_retcode,
@@ -944,7 +950,8 @@ class TestCase(unittest.TestCase):
 
     def start_bzr_subprocess(self, process_args, env_changes=None,
                              skip_if_plan_to_signal=False,
-                             working_dir=None):
+                             working_dir=None,
+                             allow_plugins=False):
         """Start bzr in a subprocess for testing.
 
         This starts a new Python interpreter and runs bzr in there.
@@ -961,6 +968,7 @@ class TestCase(unittest.TestCase):
             child, so you don't need to fix the environment after running.
         :param skip_if_plan_to_signal: raise TestSkipped when true and os.kill
             is not available.
+        :param allow_plugins: If False (default) pass --no-plugins to bzr.
 
         :returns: Popen object for the started process.
         """
@@ -992,14 +1000,24 @@ class TestCase(unittest.TestCase):
             # so we will avoid using it on all platforms, just to
             # make sure the code path is used, and we don't break on win32
             cleanup_environment()
-            process = Popen([sys.executable, bzr_path] + list(process_args),
-                             stdin=PIPE, stdout=PIPE, stderr=PIPE)
+            command = [sys.executable, bzr_path]
+            if not allow_plugins:
+                command.append('--no-plugins')
+            command.extend(process_args)
+            process = self._popen(command, stdin=PIPE, stdout=PIPE, stderr=PIPE)
         finally:
             restore_environment()
             if cwd is not None:
                 os.chdir(cwd)
 
         return process
+
+    def _popen(self, *args, **kwargs):
+        """Place a call to Popen.
+        This allows tests to inspect what is going on, without having to
+        actually spawn Popen.
+        """
+        return Popen(*args, **kwargs)
 
     def get_bzr_path(self):
         """Return the path of the 'bzr' executable for this test suite."""
