@@ -1,6 +1,7 @@
 IN DEVELOPMENT
 
   IMPROVEMENTS:
+
     * ``bzr help commands`` output is now shorter (Aaron Bentley)
 
   INTERNALS:
@@ -8,6 +9,10 @@ IN DEVELOPMENT
     * ``TestCase.run_bzr``, ``run_bzr_captured``, and ``run_bzr_subprocess``
       can take a ``working_dir='foo'`` parameter, which will change directory 
       for the command. (John Arbash Meinel)
+
+    * ``TestCase.run_bzr_subprocess`` defaults to supplying the
+      ``--no-plugins`` parameter to ensure test reproducability, and avoid
+      problems with system-wide installed plugins. (John Arbash Meinel)
 
   BUG FIXES:
 
